kubernetes/config/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: applications
---
apiVersion: v1
kind: Namespace
metadata:
  name: infrastructure
