kubernetes/config/ingress.yaml
# based on https://medium.com/kubernetes-tutorials/deploying-traefik-as-ingress-controller-for-your-kubernetes-cluster-b03a0672ae0c

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: applications
  namespace: applications
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: rabbitmq-consumer.applications.nunes.matheus
      http:
        paths:
          - path: /
            backend:
              serviceName: rabbitmq-consumer
              servicePort: http

    - host: rabbitmq-producer.applications.nunes.matheus
      http:
        paths:
          - path: /
            backend:
              serviceName: rabbitmq-producer
              servicePort: http

    - host: rabbitmq.infrastructure.nunes.matheus
      http:
        paths:
          - path: /
            backend:
              serviceName: rabbitmq
              servicePort: http

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-ingress
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:v1.7.16
          name: traefik-ingress-lb
          ports:
            - name: http
              containerPort: 80
            - name: admin
              hostPort: 81
              containerPort: 8080
          args:
            - --api
            - --kubernetes
            - --logLevel=INFO

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
    - host: traefik-ui.default.nunes.matheus
      http:
        paths:
          - path: /
            backend:
              serviceName: traefik-web-ui
              servicePort: web

---

apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
      nodePort: 30001
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8080
      nodePort: 30000
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - name: web
      port: 80
      targetPort: 8080
